--- a/LISy/LISy/LibrarianWorkWindow.xaml
+++ b/LISy/LISy/LibrarianWorkWindow.xaml
@@ -33,14 +33,23 @@
                     <DataGrid x:Name="DataGridAV_material" HorizontalAlignment="Left" Height="260" Margin="10,10,0,0" VerticalAlignment="Top" Width="801" Loaded="grid_LoaderAV_material"/>
                 </Grid>
             </TabItem>
-            <TabItem x:Name="reference_book" Header="Inner Materials">
+            <TabItem x:Name="reference_book" Header="Inner Materials" MouseUp="reference_book_MouseUp">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="DataGridRefernce_book" HorizontalAlignment="Left" Height="260" Margin="10,10,0,0" VerticalAlignment="Top" Width="801" Loaded="grid_LoaderReference_book"/>
                 </Grid>
             </TabItem>
-            <TabItem x:Name="journal_article" Header="Journal\Articles">
+            <TabItem x:Name="journal" Header="Journal">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="DataGridJournal_article" HorizontalAlignment="Left" Height="260" Margin="10,10,0,0" VerticalAlignment="Top" Width="801" Loaded="grid_LoaderJournal_article"/>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="344*"/>
+                        <ColumnDefinition Width="477*"/>
+                    </Grid.ColumnDefinitions>
+                    <DataGrid x:Name="DataGridJournal" HorizontalAlignment="Left" Height="260" Margin="10,10,0,0" VerticalAlignment="Top" Width="801"  MouseUp="journalMouseUp" Loaded="journal_Loaded" Grid.ColumnSpan="2"/>
+                </Grid>
+            </TabItem>
+            <TabItem x:Name="journalArticles" Header="Journal articles">
+                <Grid Background="#FFE5E5E5">
+                    <DataGrid x:Name="JournalArticleDataGrid" HorizontalAlignment="Left" Height="260" Margin="10,10,0,0" VerticalAlignment="Top" Width="801" Loaded="journalArticles_Loaded"/>
                 </Grid>
             </TabItem>
             <TabItem x:Name="copies" Header="Copies" Loaded="copies_Loaded" MouseUp="copies_MouseUp">
