--- a/LISy/LISy/AddJournalArticlesToJournal.xaml
+++ b/LISy/LISy/AddJournalArticlesToJournal.xaml
@@ -7,16 +7,16 @@
         mc:Ignorable="d"
         Title="AddJournalArticlesToJournal" Height="246.294" Width="310" ResizeMode="NoResize" Icon="Design/icon_logo100x100.ico" WindowStartupLocation="CenterScreen">
     <Grid>
-        <Button x:Name="save_all" Content="Save" Margin="150,10,0,0" VerticalAlignment="Top" Height="30" HorizontalAlignment="Left" Width="138" Click="save_all_Click"/>
-        <Label x:Name="article_adding_label" Content="Authors:" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top" Width="60"/>
-        <TextBox x:Name="article_authors_text_box" HorizontalAlignment="Left" Height="26" Margin="75,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="213" FontSize="16" TextChanged="article_authors_text_box_TextChanged"/>
-        <Label x:Name="article_tittle_label" Content="Tittle:" HorizontalAlignment="Left" Margin="10,76,0,0" VerticalAlignment="Top" Width="60"/>
-        <TextBox x:Name="article_title_text_box" HorizontalAlignment="Left" Height="26" Margin="75,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="213" FontSize="16" TextChanged="article_title_text_box_TextChanged"/>
-        <Label x:Name="article_keywords_label" Content="Key words:" HorizontalAlignment="Left" Margin="10,107,0,0" VerticalAlignment="Top" Width="75"/>
-        <TextBox x:Name="article_keywords_text_box" HorizontalAlignment="Left" Height="26" Margin="90,107,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="198" FontSize="16" TextChanged="article_keywords_text_box_TextChanged"/>
-        <Label x:Name="article_coverURL_title" Content="Cover URL:" HorizontalAlignment="Left" Margin="10,138,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="save_all" Content="Save" Margin="150,10,16,177" Click="save_all_Click"/>
+        <Label x:Name="article_adding_label" Content="Authors:" Margin="10,45,234,146"/>
+        <TextBox x:Name="article_authors_text_box" Margin="75,45,16,146" TextWrapping="Wrap" FontSize="16" TextChanged="article_authors_text_box_TextChanged"/>
+        <Label x:Name="article_tittle_label" Content="Tittle:" Margin="10,76,234,115"/>
+        <TextBox x:Name="article_title_text_box" Margin="75,76,16,115" TextWrapping="Wrap" FontSize="16" TextChanged="article_title_text_box_TextChanged"/>
+        <Label x:Name="article_keywords_label" Content="Key words:" Margin="10,107,219,84"/>
+        <TextBox x:Name="article_keywords_text_box" Margin="90,107,16,84" TextWrapping="Wrap" FontSize="16" TextChanged="article_keywords_text_box_TextChanged"/>
+        <Label x:Name="article_coverURL_title" Content="Cover URL:" Margin="10,138,219,53"/>
         <TextBox x:Name="article_coverURL_text_box" HorizontalAlignment="Left" Height="26" Margin="90,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="198" FontSize="16" TextChanged="article_coverURL_text_box_TextChanged"/>
-        <Button x:Name="save_and_exit" Content="Save and Exit" HorizontalAlignment="Left" Margin="150,169,0,0" VerticalAlignment="Top" Width="138" Height="30" Click="save_and_exit_Click"/>
+        <Button x:Name="save_and_exit" Content="Save and Exit" Margin="150,169,16,18" Click="save_and_exit_Click"/>
 
     </Grid>
 </Window>
