--- a/LISy/LISy/WorkWindow.xaml
+++ b/LISy/LISy/WorkWindow.xaml
@@ -39,7 +39,7 @@
         <Button x:Name="button_Booking" Content="Booking Story" HorizontalAlignment="Left" Margin="10,181,0,0" VerticalAlignment="Top" Width="145" Height="30" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontSize="16" Click="button_Booking_Click"/>
         <Button x:Name="button_Info" Content="Info" HorizontalAlignment="Left" Margin="10,216,0,0" VerticalAlignment="Top" Width="145" Height="30" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontSize="16" Click="button_Info_Click"/>
         <Grid HorizontalAlignment="Left" Height="299" Margin="160,100,0,0" VerticalAlignment="Top" Width="542">
-            <TabControl HorizontalAlignment="Left" Height="289" Margin="0,10,0,0" VerticalAlignment="Top" Width="532">
+            <TabControl x:Name="docInfoTab" HorizontalAlignment="Left" Height="289" Margin="0,10,0,0" VerticalAlignment="Top" Width="532">
                 <TabItem x:Name="tab_item_books" Header="Books">
                     <Grid Background="#FFE5E5E5">
                         <DataGrid x:Name="DataGridBook" HorizontalAlignment="Left" Height="241" Margin="10,10,0,0" VerticalAlignment="Top" Width="506" Loaded="grid_LoaderBook" MouseUp="DataGridBook_MouseUp_book"/>
@@ -55,9 +55,14 @@
                         <DataGrid x:Name="DataGridRefernce_book" HorizontalAlignment="Left" Height="241" Margin="10,10,0,0" VerticalAlignment="Top" Width="506" Loaded="grid_LoaderReference_book"/>
                     </Grid>
                 </TabItem>
-                <TabItem x:Name="journal_article" Header="Journal\Articles">
+                <TabItem x:Name="journal" Header="Journals">
                     <Grid Background="#FFE5E5E5">
-                        <DataGrid x:Name="DataGridJournal_article" HorizontalAlignment="Left" Height="241" Margin="10,10,0,0" VerticalAlignment="Top" Width="506" Loaded="grid_LoaderJournal_article"/>
+                        <DataGrid x:Name="DataGridJournal" HorizontalAlignment="Left" Height="241" Margin="10,10,0,0" VerticalAlignment="Top" Width="506" Loaded="grid_LoaderJournal"/>
+                    </Grid>
+                </TabItem>
+                <TabItem x:Name="Journal_article" Header="Journal articles">
+                    <Grid Background="#FFE5E5E5">
+                        <DataGrid x:Name="DataGridJournalArticles" HorizontalAlignment="Left" Height="241" Margin="10,10,0,0" VerticalAlignment="Top" Width="506" MouseUp="DataGridJournalArticles_MouseUp" Loaded ="grid_LoaderJournalArticle"/>
                     </Grid>
                 </TabItem>
             </TabControl>
