--- a/LISy/LISy/ModifyJournal.xaml
+++ b/LISy/LISy/ModifyJournal.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:LISy"
         mc:Ignorable="d"
         Title="ModifyJournal" Height="508.241" Width="592.986"
-        Name="ModifyWindow" Icon="Design/icon_logo100x100.ico">
+        Name="ModifyWindow" Icon="Design/icon_logo100x100.ico" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid x:Name="mainGrid">
         <Label x:Name="titleLabel" Content="Title:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="80" FontSize="15"/>
         <TextBox x:Name="titleTextBox" HorizontalAlignment="Left" Height="30" Margin="95,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="481" FontSize="15" TextChanged="titleTextBox_TextChanged"/>
