--- a/LISy/LISy/WorkWindow.xaml
+++ b/LISy/LISy/WorkWindow.xaml
@@ -9,7 +9,7 @@
     <Window.Background>
         <ImageBrush ImageSource="Design/books.jpg"/>
     </Window.Background>
-    <Grid x:Name="grid_main" Margin="0,0,-8,-1">
+    <Grid x:Name="grid_main" Margin="0,0,0,-1">
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                 <GradientStop Color="Black" Offset="0"/>
