--- a/LISy/LISy/MakeRenew.xaml
+++ b/LISy/LISy/MakeRenew.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MakeRenew" Height="82.72" Width="233" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Icon="Design/icon_logo100x100.ico">
     <Grid>
-        <CheckBox x:Name="checkRenewStatusBox" Content="Make renew" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="100" Checked="CheckBox_Checked" Height="20"/>
+        <CheckBox x:Name="checkRenewStatusBox" Content="Make renew" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="100" Height="20"/>
         <Button x:Name="SaveButton" Content="Save" Margin="115,10,0,0" HorizontalAlignment="Left" Width="100" Height="20" VerticalAlignment="Top" Click="SaveButton_Click"/>
 
     </Grid>
