--- a/LISy/LISy/ProveNotificationWindow.xaml
+++ b/LISy/LISy/ProveNotificationWindow.xaml
@@ -7,6 +7,9 @@
         mc:Ignorable="d"
         Title="ProveNotificationWindow" Height="158.824" Width="313.235" ResizeMode="NoResize" Icon="Design/icon_logo100x100.ico" WindowStartupLocation="CenterScreen">
     <Grid x:Name="MainGrid">
+        <CheckBox x:Name="acceptedCheckBox" Content="Accepted" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+        <CheckBox x:Name="ignorCheckBox" Content="Ignor" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="saveButton" Content="Save" HorizontalAlignment="Left" Margin="207,10,0,0" VerticalAlignment="Top" Width="90" Height="35" Click="saveButton_Click"/>
 
     </Grid>
 </Window>
