--- a/LISy/LISy/LibrarianWorkWindow.xaml
+++ b/LISy/LISy/LibrarianWorkWindow.xaml
@@ -10,10 +10,10 @@
         <ImageBrush ImageSource="Design/books_shelf_back.jpg"/>
     </Window.Background>
     <Grid x:Name="work_lib_grid" Margin="0,0,4,-1">
-        <Label x:Name="librarian_name" Content="Name:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="60" FontSize="16" Foreground="White"/>
-        <Label x:Name="librarian_name_fill" Content="" HorizontalAlignment="Left" Margin="75,10,0,0" VerticalAlignment="Top" Height="31" Width="305" FontSize="16" Foreground="White"/>
-        <Label x:Name="librarian_status" Content="Status:" HorizontalAlignment="Left" Margin="10,46,0,0" VerticalAlignment="Top" Width="60" FontSize="16" Foreground="White"/>
-        <Label x:Name="librarian_status_fill" Content="" HorizontalAlignment="Left" Margin="75,46,0,0" VerticalAlignment="Top" Width="305" FontSize="16" Foreground="White"/>
+        <Label x:Name="librarian_name" Content="Name:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="60" FontSize="16" Foreground="White" Height="30"/>
+        <Label x:Name="librarian_name_fill" Content="" HorizontalAlignment="Left" Margin="75,10,0,0" VerticalAlignment="Top" Height="30" Width="305" FontSize="16" Foreground="White"/>
+        <Label x:Name="librarian_status" Content="Status:" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top" Width="60" FontSize="16" Foreground="White" Height="30"/>
+        <Label x:Name="librarian_status_fill" Content="" Margin="75,45,0,0" VerticalAlignment="Top" FontSize="16" Foreground="White" HorizontalAlignment="Left" Width="305" Height="30"/>
         <Button x:Name="refresh" Content="Refresh" HorizontalAlignment="Left" Margin="260,82,0,0" VerticalAlignment="Top" Width="120" Height="22" Click="refresh_Click"/>
         <Button x:Name="add_user" Content="Add User" HorizontalAlignment="Left" Margin="10,82,0,0" VerticalAlignment="Top" Width="120" Height="22" Click="add_user_Click"/>
         <Button x:Name="add_doc" Content="Add Document" HorizontalAlignment="Left" Margin="135,82,0,0" VerticalAlignment="Top" Width="120" Height="22" Click="add_doc_Click"/>
