--- a/LISy/LISy/MakeRenew.xaml
+++ b/LISy/LISy/MakeRenew.xaml
@@ -5,10 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LISy"
         mc:Ignorable="d"
-        Title="MakeRenew" Height="82.72" Width="233" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Icon="Design/icon_logo100x100.ico">
+        Title="MakeRenew" Height="111.097" Width="298.602" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Icon="Design/icon_logo100x100.ico">
     <Grid>
-        <CheckBox x:Name="checkRenewStatusBox" Content="Make renew" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="100" Height="20"/>
-        <Button x:Name="SaveButton" Content="Save" Margin="115,10,0,0" HorizontalAlignment="Left" Width="100" Height="20" VerticalAlignment="Top" Click="SaveButton_Click"/>
+        <CheckBox x:Name="checkRenewStatusBox" Content="Make renew" HorizontalAlignment="Left" Margin="170,10,0,0" VerticalAlignment="Top" Width="100" Height="20"/>
+        <Button x:Name="SaveButton" Content="Save" Margin="170,35,0,0" HorizontalAlignment="Left" Width="100" Height="20" VerticalAlignment="Top" Click="SaveButton_Click"/>
+        <Label x:Name="fineLabel" Content="Fine:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="50"/>
+        <Label x:Name="fineShowLabel" Content="" HorizontalAlignment="Left" Margin="65,10,0,0" VerticalAlignment="Top" Width="100"/>
 
     </Grid>
 </Window>
