Вери импонтант коммит энд вери грейт ту деливери Светослав доволен

--- a/LISy/LISy/UserProfile.xaml
+++ b/LISy/LISy/UserProfile.xaml
@@ -7,18 +7,18 @@
         mc:Ignorable="d"
         Title="UserProfile" Height="303.114" Width="462.976" Icon="Design/icon_logo100x100.ico">
     <Grid x:Name="UserProfileGrid">
-        <Label x:Name="nameLabel" Content="Name:" Margin="10,10,345,232" FontSize="15"/>
-        <Label x:Name="nameLabeloutput" Content="" Margin="115,10,10,232" FontSize="15"/>
-        <Label x:Name="lastNameLabel" Content="Last name:" Margin="10,45,345,197" FontSize="15"/>
-        <Label x:Name="lastNameLabeloutput" Content="" Margin="115,45,10,197" FontSize="15"/>
-        <Label x:Name="addressLabel" Content="Address:" Margin="10,80,345,162" FontSize="15"/>
-        <Label x:Name="addressLabeloutput" Content="" Margin="115,80,10,162" FontSize="15"/>
-        <Label x:Name="phoneLabel" Content="Phone:" Margin="10,115,345,127" FontSize="15"/>
-        <Label x:Name="phoneLabeloutput" Content="" Margin="115,115,10,127" FontSize="15"/>
-        <Label x:Name="typeLabel" Content="Type:" Margin="10,150,345,92" FontSize="15"/>
-        <Label x:Name="typeLabeloutput" Content="" Margin="115,150,10,92" FontSize="15"/>
-        <Label x:Name="amountOfCopiesLabel" Content="Check out docs:" Margin="10,185,310,57" FontSize="15"/>
-        <Label x:Name="amountOfCopiesLabeloutput" Content="" Margin="150,185,10,57" FontSize="15"/>
+        <Label x:Name="nameLabel" Content="Name:" Margin="10,10,0,0" FontSize="15" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Width="100"/>
+        <Label x:Name="nameLabeloutput" Content="" Margin="115,10,0,0" FontSize="15" HorizontalAlignment="Left" Width="330" Height="30" VerticalAlignment="Top"/>
+        <Label x:Name="lastNameLabel" Content="Last name:" Margin="10,45,0,0" FontSize="15" HorizontalAlignment="Left" Width="100" Height="30" VerticalAlignment="Top"/>
+        <Label x:Name="lastNameLabeloutput" Content="" Margin="115,45,0,0" FontSize="15" HorizontalAlignment="Left" Width="330" Height="30" VerticalAlignment="Top"/>
+        <Label x:Name="addressLabel" Content="Address:" Margin="10,80,0,0" FontSize="15" HorizontalAlignment="Left" Width="100" Height="30" VerticalAlignment="Top"/>
+        <Label x:Name="addressLabeloutput" Content="" Margin="115,80,0,0" FontSize="15" HorizontalAlignment="Left" Width="330" Height="30" VerticalAlignment="Top"/>
+        <Label x:Name="phoneLabel" Content="Phone:" Margin="10,115,0,0" FontSize="15" HorizontalAlignment="Left" Width="100" Height="30" VerticalAlignment="Top"/>
+        <Label x:Name="phoneLabeloutput" Content="" Margin="115,115,0,0" FontSize="15" HorizontalAlignment="Left" Width="330" Height="30" VerticalAlignment="Top"/>
+        <Label x:Name="typeLabel" Content="Type:" Margin="10,150,0,0" FontSize="15" HorizontalAlignment="Left" Width="100" Height="30" VerticalAlignment="Top"/>
+        <Label x:Name="typeLabeloutput" Content="" Margin="115,150,0,0" FontSize="15" HorizontalAlignment="Left" Width="330" Height="30" VerticalAlignment="Top"/>
+        <Label x:Name="amountOfCopiesLabel" Content="Check out docs:" Margin="10,185,0,0" FontSize="15" HorizontalAlignment="Left" Width="135" Height="30" VerticalAlignment="Top"/>
+        <Label x:Name="amountOfCopiesLabeloutput" Content="" Margin="150,185,0,0" FontSize="15" HorizontalAlignment="Left" Width="295" Height="30" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
