--- a/LISy/LISy/ProveNotificationWindow.xaml
+++ b/LISy/LISy/ProveNotificationWindow.xaml
@@ -5,11 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LISy"
         mc:Ignorable="d"
-        Title="ProveNotificationWindow" Height="158.824" Width="313.235" ResizeMode="NoResize" Icon="Design/icon_logo100x100.ico" WindowStartupLocation="CenterScreen">
+        Title="ProveNotificationWindow" Height="84.668" Width="313.235" ResizeMode="NoResize" Icon="Design/icon_logo100x100.ico" WindowStartupLocation="CenterScreen">
     <Grid x:Name="MainGrid">
-        <CheckBox x:Name="acceptedCheckBox" Content="Accepted" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-        <CheckBox x:Name="ignorCheckBox" Content="Ignor" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="saveButton" Content="Save" HorizontalAlignment="Left" Margin="207,10,0,0" VerticalAlignment="Top" Width="90" Height="35" Click="saveButton_Click"/>
-
+        <Grid.Background>
+            <ImageBrush ImageSource="Design/books_shelf_back.jpg" Stretch="None"/>
+        </Grid.Background>
+        <CheckBox x:Name="acceptedCheckBox" Content="Accepted" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Foreground="White"/>
+        <CheckBox x:Name="ignorCheckBox" Content="Ignor" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top" Height="16" Width="70" Foreground="White"/>
+        <Button x:Name="saveButton" Content="Save" HorizontalAlignment="Left" Margin="207,10,0,10" Width="90" Click="saveButton_Click" Foreground="White" Background="{x:Null}" BorderBrush="{x:Null}"/>
     </Grid>
 </Window>
