--- a/LISy/LISy/BookingHistory.xaml
+++ b/LISy/LISy/BookingHistory.xaml
@@ -1,16 +1,19 @@
-﻿<Window x:Class="LISy.BookingHistory"
+﻿<Window x:Name="my_booking_history" x:Class="LISy.BookingHistory"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LISy"
         mc:Ignorable="d"
-        Title="BookingHistory" Height="315.604" Width="495.366">
+        Title="My Booking History" Height="315.604" Width="495.366" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Icon="Design/icon_logo100x100.ico">
+    <Window.Background>
+        <ImageBrush ImageSource="Design/books_shelf_back.jpg"/>
+    </Window.Background>
     <Grid>
-        <Label x:Name="name" Content="Name:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="80"/>
-        <Label x:Name="id" Content="ID:" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" Width="80"/>
-        <Label x:Name="name_patron" Content="" HorizontalAlignment="Left" Margin="95,10,0,0" VerticalAlignment="Top" Width="372" Height="26"/>
-        <Label x:Name="id_patron" Content="" HorizontalAlignment="Left" Margin="95,41,0,0" VerticalAlignment="Top" Width="372"/>
+        <Label x:Name="name" Content="Name:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="80" Foreground="White"/>
+        <Label x:Name="id" Content="ID:" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" Width="80" Foreground="White"/>
+        <Label x:Name="name_patron" Content="" HorizontalAlignment="Left" Margin="95,10,0,0" VerticalAlignment="Top" Width="372" Height="26" Foreground="White"/>
+        <Label x:Name="id_patron" Content="" HorizontalAlignment="Left" Margin="95,41,0,0" VerticalAlignment="Top" Width="372" Foreground="White"/>
         <TabControl x:Name="grid_for_user" HorizontalAlignment="Left" Height="191" Margin="10,72,0,0" VerticalAlignment="Top" Width="457">
             <TabItem Header="Check out copies">
                 <Grid Background="#FFE5E5E5">
