--- a/LISy/LISy/MainWindow.xaml
+++ b/LISy/LISy/MainWindow.xaml
@@ -1,33 +1,33 @@
-﻿<Window x:Class="LISy.MainWindow"
+﻿<Window x:Name="EntranceWindow" x:Class="LISy.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LISy"
         mc:Ignorable="d"
-        Title="Enter" Height="374" Width="572" Icon ="Design\icon_logo100x100.ico" FontSize="16" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="Entrance" Height="374" Width="572" Icon ="Design\icon_logo100x100.ico" FontSize="16" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Cursor="Arrow">
     <Window.Background>
         <ImageBrush ImageSource="Design\books_shelf_back.jpg"/>
     </Window.Background>
     <Grid x:Name="grid_enter">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="566"/>
             <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
-        <Image x:Name="image_background" HorizontalAlignment="Left" Height="100" Margin="10,10,0,0" VerticalAlignment="Top" Width="544" Source="Design\image_title_white.png"/>
-        <Button x:Name="button_sign_in" Content="Sign In" Margin="200,257,186,0" Height="30" VerticalAlignment="Top" Background="{x:Null}" Foreground="White" Click="button_sign_in_Click">
+        <Image x:Name="image_background" Margin="11,10,11,235" Source="Design\image_title_white.png"/>
+        <Button x:Name="button_sign_in" Content="Sign In" Margin="193,257,193,0" Background="{x:Null}" Foreground="White" Click="button_sign_in_Click" Height="30" VerticalAlignment="Top" Cursor="Arrow">
             <Button.BorderBrush>
                 <ImageBrush/>
             </Button.BorderBrush>
         </Button>
-        <Button x:Name="button_sign_up" Content="Sing Up" Margin="200,292,186,0" Height="27" VerticalAlignment="Top" Foreground="White" Background="{x:Null}" Click="button_sign_up_Click">
+        <Button x:Name="button_sign_up" Content="Sign Up" Margin="193,292,193,0" Foreground="White" Background="{x:Null}" Click="button_sign_up_Click" Height="27" VerticalAlignment="Top" Cursor="Arrow">
             <Button.BorderBrush>
                 <ImageBrush/>
             </Button.BorderBrush>
         </Button>
-        <Grid x:Name="enter_field" Height="137" Margin="200,115,186,0" VerticalAlignment="Top" Background="#66000000">
-            <Label x:Name="label_login" Content="Login" Margin="10,10,10,101" FontSize="12" Foreground="White"/>
-            <TextBox x:Name="textBox_login" Height="30" Margin="10,36,10,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" Background="#99000000" SpellCheck.IsEnabled="True" SelectionOpacity="0.3" Cursor="None" UndoLimit="16" TextChanged="textBox_login_TextChanged">
+        <Grid x:Name="enter_field" Margin="193,115,193,0" Background="#66000000" Height="137" VerticalAlignment="Top">
+            <Label x:Name="label_login" Content="Login" Margin="10,10,10,0" Foreground="White" Height="26" VerticalAlignment="Top" FontSize="12"/>
+            <TextBox x:Name="textBox_login" Margin="10,36,10,0" TextWrapping="Wrap" Foreground="White" Background="#99000000" SpellCheck.IsEnabled="True" SelectionOpacity="0.3" Cursor="Arrow" UndoLimit="16" TextChanged="textBox_login_TextChanged" Height="30" VerticalAlignment="Top" FontSize="18">
                 <TextBox.SelectionBrush>
                     <ImageBrush/>
                 </TextBox.SelectionBrush>
@@ -35,8 +35,8 @@
                     <ImageBrush/>
                 </TextBox.BorderBrush>
             </TextBox>
-            <Label x:Name="label_password" Content="Password" Margin="10,71,10,0" VerticalAlignment="Top" Foreground="White" FontSize="12"/>
-            <PasswordBox x:Name="passwordBox_enter" Margin="10,97,10,0" VerticalAlignment="Top" Height="30" Background="#99000000" Foreground="White">
+            <Label x:Name="label_password" Content="Password" Margin="10,71,10,0" Foreground="White" FontSize="12" Height="26" VerticalAlignment="Top"/>
+            <PasswordBox x:Name="passwordBox_enter" Margin="10,97,10,0" Background="#99000000" Foreground="White" Height="30" VerticalAlignment="Top" Cursor="Arrow" FontSize="18">
                 <PasswordBox.SelectionBrush>
                     <ImageBrush/>
                 </PasswordBox.SelectionBrush>
@@ -45,6 +45,5 @@
                 </PasswordBox.BorderBrush>
             </PasswordBox>
         </Grid>
-
     </Grid>
 </Window>
